--- a/portfolio.html
+++ b/portfolio.html
@@ -13,35 +13,37 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="page-header">
+    <header class="header-nav">
       <nav>
         <a href="./portfolio.html" class="link header-logo-web"
           >WEB<span class="link header-logo-studio">Studio</span></a
         >
         <ul class="list">
-          <li>
+          <li class="nav-list-item">
             <a href="./index.html" class="nav-link link">Studio</a>
           </li>
 
-          <li>
+          <li class="nav-list-item">
             <a href="./portfolio.html" class="nav-link link">Portfolio</a>
           </li>
 
-          <li>
+          <li class="nav-list-item">
             <a href="" class="nav-link link">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <address class="contacts">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link"
+        <ul class="contacts-list">
+          <li class="contacts-list-item">
+            <a href="mailto:info@devstudio.com" class="contacts-list-link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+          <li class="contacts-list-item">
+            <a href="tel:+110001111111" class="contacts-list-link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -51,29 +53,29 @@
       <!--section-->
       <!--Buttons-->
       <section>
-        <h1 class="Portfolio">Portfolio</h1>
-        <ul class="list">
-          <li>
+        <h1 class="portfolio">Portfolio</h1>
+        <ul class="portfolio-list">
+          <li class="portfolio-list-item">
             <button type="button" class="button-portfolio">All</button>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <button type="button" class="button-portfolio">Web Site</button>
           </li>
 
-          <li>
+          <li class="portfolio-list-item">
             <button type="button" class="button-portfolio">App</button>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <button type="button" class="button-portfolio">Design</button>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <button type="button" class="button-portfolio">Marketing</button>
           </li>
         </ul>
 
         <!--Projects-card-->
         <!--ROW1-->
-        <ul class="list">
+        <ul class="prj-card-list">
           <li class="item-card">
             <a href="" class="link">
               <img
@@ -81,10 +83,10 @@
                 alt="Project-card1"
                 width="360"
                 height="300"
-                class="card-row1"
+                class="card-row"
               />
-              <h2 class="concept-title">Banking App Interface Concept</h2>
-              <p class="concept-text">App</p>
+              <h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
+              <p class="portfolio-text">App</p>
             </a>
           </li>
 
@@ -95,10 +97,10 @@
                 alt="Project-card2"
                 width="360"
                 height="300"
-                class="card-row1"
+                class="card-row"
               />
-              <h2 class="concept-title">Cashless Payment</h2>
-              <p class="concept-text">Marketing</p>
+              <h2 class="portfolio-subtitle">Cashless Payment</h2>
+              <p class="portfolio-text">Marketing</p>
             </a>
           </li>
 
@@ -109,10 +111,10 @@
                 alt="Project-card3"
                 width="360"
                 height="300"
-                class="card-row1"
+                class="card-row"
               />
-              <h2 class="concept-title">Meditation App</h2>
-              <p class="concept-text">App</p>
+              <h2 class="portfolio-subtitle">Meditation App</h2>
+              <p class="portfolio-text">App</p>
             </a>
           </li>
 
@@ -124,10 +126,10 @@
                 alt="Project-card1"
                 width="360"
                 height="300"
-                class="card-row2"
+                class="card-row"
               />
-              <h2 class="concept-title">Taxi Service</h2>
-              <p class="concept-text">Marketing</p>
+              <h2 class="portfolio-subtitle">Taxi Service</h2>
+              <p class="portfolio-text">Marketing</p>
             </a>
           </li>
 
@@ -138,10 +140,10 @@
                 alt="Project-card2"
                 width="360"
                 height="300"
-                class="card-row2"
+                class="card-row"
               />
-              <h2 class="concept-title">Screen Illustrations</h2>
-              <p class="concept-text">Design</p>
+              <h2 class="portfolio-subtitle">Screen Illustrations</h2>
+              <p class="portfolio-text">Design</p>
             </a>
           </li>
 
@@ -152,10 +154,10 @@
                 alt="Project-card3"
                 width="360"
                 height="300"
-                class="card-row2"
+                class="card-row"
               />
-              <h2 class="concept-title">Online Courses</h2>
-              <p class="concept-text">Marketing</p>
+              <h2 class="portfolio-subtitle">Online Courses</h2>
+              <p class="portfolio-text">Marketing</p>
             </a>
           </li>
 
@@ -168,10 +170,10 @@
                 alt="Project-card1"
                 width="360"
                 height="300"
-                class="card-row3"
+                class="card-row"
               />
-              <h2 class="concept-title">Instagram Stories Concept</h2>
-              <p class="concept-text">Design</p>
+              <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
+              <p class="portfolio-text">Design</p>
             </a>
           </li>
 
@@ -182,10 +184,10 @@
                 alt="Project-card2"
                 width="360"
                 height="300"
-                class="card-row3"
+                class="card-row"
               />
-              <h2 class="concept-title">Organic Food</h2>
-              <p class="concept-text">Web Site</p>
+              <h2 class="portfolio-subtitle">Organic Food</h2>
+              <p class="portfolio-text">Web Site</p>
             </a>
           </li>
 
@@ -196,10 +198,10 @@
                 alt="Project-card3"
                 width="360"
                 height="300"
-                class="card-row3"
+                class="card-row"
               />
-              <h2 class="concept-title">Fresh Coffee</h2>
-              <p class="concept-text">Web Site</p>
+              <h2 class="portfolio-subtitle">Fresh Coffee</h2>
+              <p class="portfolio-text">Web Site</p>
             </a>
           </li>
         </ul>
