--- a/index.html
+++ b/index.html
@@ -14,45 +14,51 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <header class="header-nav">
       <nav>
         <a href="./index.html" class="link header-logo-web"
           >WEB<span class="link header-logo-studio">Studio</span></a
         >
         <ul class="list">
-          <li>
+          <li class="nav-list-item">
             <a href="./index.html" class="nav-link link">Studio</a>
           </li>
 
-          <li>
+          <li class="nav-list-item">
             <a href="./portfolio.html" class="nav-link link">Portfolio</a>
           </li>
 
-          <li>
+          <li class="nav-list-item">
             <a href="" class="nav-link link">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <address class="contacts">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link"
+        <ul class="contacts-list">
+          <li class="contacts-list-item">
+            <a href="mailto:info@devstudio.com" class="contacts-list-link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+          <li class="contacts-list-item">
+            <a href="tel:+110001111111" class="contacts-list-link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
 
     <main>
+      <!--Section 1-->
+      <!--HERO-->
       <section class="hero">
         <h1 class="main-page">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
       </section>
+      <!--Section 2-->
+      <!--Concept-->
       <section class="section-one">
         <h2 class="title">Concept</h2>
 
@@ -90,7 +96,8 @@
           </li>
         </ul>
       </section>
-
+      <!--Section 3-->
+      <!--What are we doing-->
       <section>
         <h2 class="title">What are we doing</h2>
 
@@ -121,7 +128,8 @@
           </li>
         </ul>
       </section>
-
+      <!--Section 4-->
+      <!--Our team-->
       <section class="sectoin-team">
         <h2 class="title">Our Team</h2>
         <ul class="list">
