--- a/index.html
+++ b/index.html
@@ -10,16 +10,24 @@
       rel="stylesheet"
     />
     <title>Studia</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header class="header-nav">
+    <div class="container">
       <nav>
         <a href="./index.html" class="link header-logo-web"
           >WEB<span class="link header-logo-studio">Studio</span></a
         >
-        <ul class="list">
+        <ul class="nav-list">
           <li class="nav-list-item">
             <a href="./index.html" class="nav-link link">Studio</a>
           </li>
@@ -34,7 +42,7 @@
         </ul>
       </nav>
 
-      <address class="contacts">
+      <address class="nav-list-contacts">
         <ul class="contacts-list">
           <li class="contacts-list-item">
             <a href="mailto:info@devstudio.com" class="contacts-list-link"
@@ -48,19 +56,23 @@
           </li>
         </ul>
       </address>
+    </div>
     </header>
 
     <main>
       <!--Section 1-->
       <!--HERO-->
       <section class="hero">
+      <div class="container">
         <h1 class="main-page">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
+      </div>
       </section>
       <!--Section 2-->
       <!--Concept-->
       <section class="section-one">
-        <h2 class="title">Concept</h2>
+      <div class="container">
+        <h2 class="visually-hidden">Concept</h2>
 
         <ul class="list">
           <li>
@@ -95,10 +107,12 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
       <!--Section 3-->
       <!--What are we doing-->
       <section>
+      <div class="container">
         <h2 class="title">What are we doing</h2>
 
         <ul class="list">
@@ -127,10 +141,12 @@
             />
           </li>
         </ul>
+      </div>
       </section>
       <!--Section 4-->
       <!--Our team-->
       <section class="sectoin-team">
+      <div class="container">
         <h2 class="title">Our Team</h2>
         <ul class="list">
           <li class="item-picture">
@@ -179,9 +195,11 @@
           </li>
         </ul>
       </section>
+    </div>
     </main>
 
     <footer class="footer-board">
+    <div class="container">
       <a href="./index.html" class="link footer-logo-web"
         >WEB<span class="link footer-logo-studio">Studio</span></a
       >
@@ -189,6 +207,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
