--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
       </section>
       <!--Section 2-->
       <!--Concept-->
-      <section class="section-one">
+      <section class="section-concept">
       <div class="container">
         <h2 class="visually-hidden">Concept</h2>
 
-        <ul class="list">
+        <ul class="cocept-list">
           <li>
             <h3 class="concept-title">Strategy</h3>
             <p class="concept-text">
