--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
       </section>
       <!--Section 2-->
       <!--Concept-->
-      <section class="section-concept">
+      <section class="concept">
       <div class="container">
         <h2 class="visually-hidden">Concept</h2>
 
-        <ul class="cocept-list">
-          <li>
+        <ul class="concept-list">
+          <li class="concept-item">
             <h3 class="concept-title">Strategy</h3>
             <p class="concept-text">
               Our goal is to identify the business problem to walk away with the
@@ -83,7 +83,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="concept-item">
             <h3 class="concept-title">Punctuality</h3>
             <p class="concept-text">
               Bring the key message to the brand's audience for the best price
@@ -91,7 +91,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="concept-item">
             <h3 class="concept-title">Diligence</h3>
             <p class="concept-text">
               Research and confirm brands that present the strongest digital
@@ -99,7 +99,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="concept-item">
             <h3 class="concept-title">Technologies</h3>
             <p class="concept-text">
               Design practice focused on digital experiences. We bring forth a
