--- a/index.html
+++ b/index.html
@@ -111,29 +111,29 @@
       </section>
       <!--Section 3-->
       <!--What are we doing-->
-      <section>
+      <section class="doing">
       <div class="container">
         <h2 class="title">What are we doing</h2>
 
-        <ul class="list">
-          <li>
-            <img
+        <ul class="doing-list">
+          <li class="doing-item">
+            <img class="img-doing"
               src="./images/doing/photo1.jpg"
               width="360"
               height="300"
               alt="photo1"
             />
           </li>
-          <li>
-            <img
+          <li class="doing-item">
+            <img class="img-doing"
               src="./images/doing/photo2.jpg"
               width="360"
               height="300"
               alt="photo2"
             />
           </li>
-          <li>
-            <img
+          <li class="doing-item">
+            <img class="img-doing"
               src="./images/doing/photo3.jpg"
               width="360"
               height="300"
@@ -145,10 +145,10 @@
       </section>
       <!--Section 4-->
       <!--Our team-->
-      <section class="sectoin-team">
+      <section class="team">
       <div class="container">
         <h2 class="title">Our Team</h2>
-        <ul class="list">
+        <ul class="team-list">
           <li class="item-picture">
             <img
               src="./images/team/mark1.jpg"
@@ -198,7 +198,7 @@
     </div>
     </main>
 
-    <footer class="footer-board">
+    <footer class="footer">
     <div class="container">
       <a href="./index.html" class="link footer-logo-web"
         >WEB<span class="link footer-logo-studio">Studio</span></a
