--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
       <!--Our team-->
       <section class="team">
       <div class="container">
-        <h2 class="title">Our Team</h2>
+        <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
-          <li class="item-picture">
+          <li class="team-item">
             <img
               src="./images/team/mark1.jpg"
               width="264"
@@ -157,10 +157,10 @@
               alt="mark1"
               class="picture-team"
             />
-            <h3 class="concept-title">Mark Guerrero</h3>
-            <p class="concept-text">Product Designer</p>
+            <h3 class="card-heading">Mark Guerrero</h3>
+            <p class="card-desc">Product Designer</p>
           </li>
-          <li class="item-picture">
+          <li class="team-item">
             <img
               src="./images/team/tom2.jpg"
               width="264"
@@ -168,10 +168,10 @@
               alt="tom2"
               class="picture-team"
             />
-            <h3 class="concept-title">Tom Ford</h3>
-            <p class="concept-text">Frontend Developer</p>
+            <h3 class="card-heading">Tom Ford</h3>
+            <p class="card-desc">Frontend Developer</p>
           </li>
-          <li class="item-picture">
+          <li class="team-item">
             <img
               src="./images/team/camila3.jpg"
               width="264"
@@ -179,10 +179,10 @@
               alt="camila3"
               class="picture-team"
             />
-            <h3 class="concept-title">Camila Garcia</h3>
-            <p class="concept-text">Marketing</p>
+            <h3 class="card-heading">Camila Garcia</h3>
+            <p class="card-desc">Marketing</p>
           </li>
-          <li class="item-picture">
+          <li class="team-item">
             <img
               src="./images/team/daniel4.jpg"
               width="264"
@@ -190,8 +190,8 @@
               alt="daniel4"
               class="picture-team"
             />
-            <h3 class="concept-title">Daniel Wilson</h3>
-            <p class="concept-text">UI Designer</p>
+            <h3 class="card-heading">Daniel Wilson</h3>
+            <p class="card-desc">UI Designer</p>
           </li>
         </ul>
       </section>
