--- a/portfolio.html
+++ b/portfolio.html
@@ -21,208 +21,216 @@
   </head>
   <body>
     <header class="header-nav">
-      <nav>
-        <a href="./portfolio.html" class="link header-logo-web"
-          >WEB<span class="link header-logo-studio">Studio</span></a
-        >
-        <ul class="list">
-          <li class="nav-list-item">
-            <a href="./index.html" class="nav-link link">Studio</a>
-          </li>
+      <div class="container">
+        <nav>
+          <a href="./portfolio.html" class="link header-logo-web"
+            >WEB<span class="link header-logo-studio">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-list-item">
+              <a href="./index.html" class="nav-link link">Studio</a>
+            </li>
 
-          <li class="nav-list-item">
-            <a href="./portfolio.html" class="nav-link link">Portfolio</a>
-          </li>
+            <li class="nav-list-item">
+              <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+            </li>
 
-          <li class="nav-list-item">
-            <a href="" class="nav-link link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+            <li class="nav-list-item">
+              <a href="" class="nav-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-list-item">
-            <a href="mailto:info@devstudio.com" class="contacts-list-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-list-item">
-            <a href="tel:+110001111111" class="contacts-list-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="nav-list-contacts">
+          <ul class="contacts-list">
+            <li class="contacts-list-item">
+              <a href="mailto:info@devstudio.com" class="contacts-list-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-list-item">
+              <a href="tel:+110001111111" class="contacts-list-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!--section-->
       <!--Buttons-->
-      <section>
-        <h1 class="portfolio">Portfolio</h1>
-        <ul class="portfolio-list">
-          <li class="portfolio-list-item">
-            <button type="button" class="button-portfolio">All</button>
-          </li>
-          <li class="portfolio-list-item">
-            <button type="button" class="button-portfolio">Web Site</button>
-          </li>
+      <section class="portfolio">
+        <div class="container">
+          <h1 class="visually-hidden">Portfolio</h1>
+          <ul class="portfolio-button-list">
+            <li class="portfolio-button-item">
+              <button type="button" class="button-portfolio">All</button>
+            </li>
+            <li class="portfolio-list-item">
+              <button type="button" class="button-portfolio">Web Site</button>
+            </li>
 
-          <li class="portfolio-list-item">
-            <button type="button" class="button-portfolio">App</button>
-          </li>
-          <li class="portfolio-list-item">
-            <button type="button" class="button-portfolio">Design</button>
-          </li>
-          <li class="portfolio-list-item">
-            <button type="button" class="button-portfolio">Marketing</button>
-          </li>
-        </ul>
+            <li class="portfolio-list-item">
+              <button type="button" class="button-portfolio">App</button>
+            </li>
+            <li class="portfolio-list-item">
+              <button type="button" class="button-portfolio">Design</button>
+            </li>
+            <li class="portfolio-list-item">
+              <button type="button" class="button-portfolio">Marketing</button>
+            </li>
+          </ul>
 
-        <!--Projects-card-->
-        <!--ROW1-->
-        <ul class="prj-card-list">
-          <li class="item-card">
-            <a href="" class="link">
-              <img
-                src="./images/row1/img001.jpg"
-                alt="Project-card1"
-                width="360"
-                height="300"
-                class="card-row"
-              />
-              <h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
-              <p class="portfolio-text">App</p>
-            </a>
-          </li>
+          <!--Projects-card-->
+          <!--ROW1-->
+          <ul class="prj-card-list">
+            <li class="item-card">
+              <a href="" class="link">
+                <img
+                  src="./images/row1/img001.jpg"
+                  alt="Project-card1"
+                  width="360"
+                  height="300"
+                  class="card-row"
+                />
+                <h2 class="portfolio-subtitle">
+                  Banking App Interface Concept
+                </h2>
+                <p class="portfolio-text">App</p>
+              </a>
+            </li>
 
-          <li class="item-card">
-            <a href="" class="link">
-              <img
-                src="./images/row1/img002.jpg"
-                alt="Project-card2"
-                width="360"
-                height="300"
-                class="card-row"
-              />
-              <h2 class="portfolio-subtitle">Cashless Payment</h2>
-              <p class="portfolio-text">Marketing</p>
-            </a>
-          </li>
+            <li class="item-card">
+              <a href="" class="link">
+                <img
+                  src="./images/row1/img002.jpg"
+                  alt="Project-card2"
+                  width="360"
+                  height="300"
+                  class="card-row"
+                />
+                <h2 class="portfolio-subtitle">Cashless Payment</h2>
+                <p class="portfolio-text">Marketing</p>
+              </a>
+            </li>
 
-          <li class="item-card">
-            <a href="" class="link">
-              <img
-                src="./images/row1/img003.jpg"
-                alt="Project-card3"
-                width="360"
-                height="300"
-                class="card-row"
-              />
-              <h2 class="portfolio-subtitle">Meditation App</h2>
-              <p class="portfolio-text">App</p>
-            </a>
-          </li>
+            <li class="item-card">
+              <a href="" class="link">
+                <img
+                  src="./images/row1/img003.jpg"
+                  alt="Project-card3"
+                  width="360"
+                  height="300"
+                  class="card-row"
+                />
+                <h2 class="portfolio-subtitle">Meditation App</h2>
+                <p class="portfolio-text">App</p>
+              </a>
+            </li>
 
-          <!--ROW2-->
-          <li class="item-card">
-            <a href="" class="link">
-              <img
-                src="./images/row2/img001.jpg"
-                alt="Project-card1"
-                width="360"
-                height="300"
-                class="card-row"
-              />
-              <h2 class="portfolio-subtitle">Taxi Service</h2>
-              <p class="portfolio-text">Marketing</p>
-            </a>
-          </li>
+            <!--ROW2-->
+            <li class="item-card">
+              <a href="" class="link">
+                <img
+                  src="./images/row2/img001.jpg"
+                  alt="Project-card1"
+                  width="360"
+                  height="300"
+                  class="card-row"
+                />
+                <h2 class="portfolio-subtitle">Taxi Service</h2>
+                <p class="portfolio-text">Marketing</p>
+              </a>
+            </li>
 
-          <li class="item-card">
-            <a href="" class="link">
-              <img
-                src="./images/row2/img002.jpg"
-                alt="Project-card2"
-                width="360"
-                height="300"
-                class="card-row"
-              />
-              <h2 class="portfolio-subtitle">Screen Illustrations</h2>
-              <p class="portfolio-text">Design</p>
-            </a>
-          </li>
+            <li class="item-card">
+              <a href="" class="link">
+                <img
+                  src="./images/row2/img002.jpg"
+                  alt="Project-card2"
+                  width="360"
+                  height="300"
+                  class="card-row"
+                />
+                <h2 class="portfolio-subtitle">Screen Illustrations</h2>
+                <p class="portfolio-text">Design</p>
+              </a>
+            </li>
 
-          <li class="item-card">
-            <a href="" class="link">
-              <img
-                src="./images/row2/img003.jpg"
-                alt="Project-card3"
-                width="360"
-                height="300"
-                class="card-row"
-              />
-              <h2 class="portfolio-subtitle">Online Courses</h2>
-              <p class="portfolio-text">Marketing</p>
-            </a>
-          </li>
+            <li class="item-card">
+              <a href="" class="link">
+                <img
+                  src="./images/row2/img003.jpg"
+                  alt="Project-card3"
+                  width="360"
+                  height="300"
+                  class="card-row"
+                />
+                <h2 class="portfolio-subtitle">Online Courses</h2>
+                <p class="portfolio-text">Marketing</p>
+              </a>
+            </li>
 
-          <!--ROW3-->
+            <!--ROW3-->
 
-          <li class="item-card">
-            <a href="" class="link">
-              <img
-                src="./images/row3/img001.jpg"
-                alt="Project-card1"
-                width="360"
-                height="300"
-                class="card-row"
-              />
-              <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
-              <p class="portfolio-text">Design</p>
-            </a>
-          </li>
+            <li class="item-card">
+              <a href="" class="link">
+                <img
+                  src="./images/row3/img001.jpg"
+                  alt="Project-card1"
+                  width="360"
+                  height="300"
+                  class="card-row"
+                />
+                <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
+                <p class="portfolio-text">Design</p>
+              </a>
+            </li>
 
-          <li class="item-card">
-            <a href="" class="link">
-              <img
-                src="./images/row3/img002.jpg"
-                alt="Project-card2"
-                width="360"
-                height="300"
-                class="card-row"
-              />
-              <h2 class="portfolio-subtitle">Organic Food</h2>
-              <p class="portfolio-text">Web Site</p>
-            </a>
-          </li>
+            <li class="item-card">
+              <a href="" class="link">
+                <img
+                  src="./images/row3/img002.jpg"
+                  alt="Project-card2"
+                  width="360"
+                  height="300"
+                  class="card-row"
+                />
+                <h2 class="portfolio-subtitle">Organic Food</h2>
+                <p class="portfolio-text">Web Site</p>
+              </a>
+            </li>
 
-          <li class="item-card">
-            <a href="" class="link">
-              <img
-                src="./images/row3/img003.jpg"
-                alt="Project-card3"
-                width="360"
-                height="300"
-                class="card-row"
-              />
-              <h2 class="portfolio-subtitle">Fresh Coffee</h2>
-              <p class="portfolio-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+            <li class="item-card">
+              <a href="" class="link">
+                <img
+                  src="./images/row3/img003.jpg"
+                  alt="Project-card3"
+                  width="360"
+                  height="300"
+                  class="card-row"
+                />
+                <h2 class="portfolio-subtitle">Fresh Coffee</h2>
+                <p class="portfolio-text">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
-    <footer class="footer-board">
-      <a href="./portfolio.html" class="link footer-logo-web"
-        >WEB<span class="link footer-logo-studio">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer">
+      <div class="container">
+        <a href="./index.html" class="link footer-logo-web"
+          >WEB<span class="link footer-logo-studio">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
