--- a/index.html
+++ b/index.html
@@ -22,192 +22,203 @@
 
   <body>
     <header class="header-nav">
-    <div class="container">
-      <nav>
-        <a href="./index.html" class="link header-logo-web"
-          >WEB<span class="link header-logo-studio">Studio</span></a
-        >
-        <ul class="nav-list">
-          <li class="nav-list-item">
-            <a href="./index.html" class="nav-link link">Studio</a>
-          </li>
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="link header-logo-web"
+            >WEB<span class="link header-logo-studio">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-list-item">
+              <a href="./index.html" class="nav-link link">Studio</a>
+            </li>
 
-          <li class="nav-list-item">
-            <a href="./portfolio.html" class="nav-link link">Portfolio</a>
-          </li>
+            <li class="nav-list-item">
+              <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+            </li>
 
-          <li class="nav-list-item">
-            <a href="" class="nav-link link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+            <li class="nav-list-item">
+              <a href="" class="nav-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="nav-list-contacts">
-        <ul class="contacts-list">
-          <li class="contacts-list-item">
-            <a href="mailto:info@devstudio.com" class="contacts-list-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-list-item">
-            <a href="tel:+110001111111" class="contacts-list-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-    </div>
+        <address class="nav-list-contacts">
+          <ul class="contacts-list">
+            <li class="contacts-list-item">
+              <a href="mailto:info@devstudio.com" class="contacts-list-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-list-item">
+              <a href="tel:+110001111111" class="contacts-list-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!--Section 1-->
       <!--HERO-->
       <section class="hero">
-      <div class="container">
-        <h1 class="main-page">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
-      </div>
+        <div class="container">
+          <h1 class="main-page">Effective Solutions for Your Business</h1>
+          <button type="button" class="button">Order Service</button>
+        </div>
       </section>
       <!--Section 2-->
       <!--Concept-->
       <section class="concept">
-      <div class="container">
-        <h2 class="visually-hidden">Concept</h2>
+        <div class="container">
+          <h2 class="visually-hidden">Concept</h2>
 
-        <ul class="concept-list">
-          <li class="concept-item">
-            <h3 class="concept-title">Strategy</h3>
-            <p class="concept-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
+          <ul class="concept-list">
+            <li class="concept-item">
+              <h3 class="concept-title">Strategy</h3>
+              <p class="concept-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
 
-          <li class="concept-item">
-            <h3 class="concept-title">Punctuality</h3>
-            <p class="concept-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
+            <li class="concept-item">
+              <h3 class="concept-title">Punctuality</h3>
+              <p class="concept-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
 
-          <li class="concept-item">
-            <h3 class="concept-title">Diligence</h3>
-            <p class="concept-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
+            <li class="concept-item">
+              <h3 class="concept-title">Diligence</h3>
+              <p class="concept-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
 
-          <li class="concept-item">
-            <h3 class="concept-title">Technologies</h3>
-            <p class="concept-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </div>
+            <li class="concept-item">
+              <h3 class="concept-title">Technologies</h3>
+              <p class="concept-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Section 3-->
       <!--What are we doing-->
       <section class="doing">
-      <div class="container">
-        <h2 class="title">What are we doing</h2>
+        <div class="container">
+          <h2 class="title">What are we doing</h2>
 
-        <ul class="doing-list">
-          <li class="doing-item">
-            <img class="img-doing"
-              src="./images/doing/photo1.jpg"
-              width="360"
-              height="300"
-              alt="photo1"
-            />
-          </li>
-          <li class="doing-item">
-            <img class="img-doing"
-              src="./images/doing/photo2.jpg"
-              width="360"
-              height="300"
-              alt="photo2"
-            />
-          </li>
-          <li class="doing-item">
-            <img class="img-doing"
-              src="./images/doing/photo3.jpg"
-              width="360"
-              height="300"
-              alt="photo3"
-            />
-          </li>
-        </ul>
-      </div>
+          <ul class="doing-list">
+            <li class="doing-item">
+              <img
+                class="img-doing"
+                src="./images/doing/photo1.jpg"
+                width="360"
+                height="300"
+                alt="photo1"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                class="img-doing"
+                src="./images/doing/photo2.jpg"
+                width="360"
+                height="300"
+                alt="photo2"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                class="img-doing"
+                src="./images/doing/photo3.jpg"
+                width="360"
+                height="300"
+                alt="photo3"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Section 4-->
       <!--Our team-->
       <section class="team">
-      <div class="container">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              src="./images/team/mark1.jpg"
-              width="264"
-              height="260"
-              alt="mark1"
-              class="picture-team"
-            />
-            <h3 class="card-heading">Mark Guerrero</h3>
-            <p class="card-desc">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team/tom2.jpg"
-              width="264"
-              height="260"
-              alt="tom2"
-              class="picture-team"
-            />
-            <h3 class="card-heading">Tom Ford</h3>
-            <p class="card-desc">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team/camila3.jpg"
-              width="264"
-              height="260"
-              alt="camila3"
-              class="picture-team"
-            />
-            <h3 class="card-heading">Camila Garcia</h3>
-            <p class="card-desc">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team/daniel4.jpg"
-              width="264"
-              height="260"
-              alt="daniel4"
-              class="picture-team"
-            />
-            <h3 class="card-heading">Daniel Wilson</h3>
-            <p class="card-desc">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                src="./images/team/mark1.jpg"
+                width="264"
+                height="260"
+                alt="mark1"
+                class="picture-team"
+              />
+              <div class="mark">
+                <h3 class="card-heading">Mark Guerrero</h3>
+                <p class="card-desc">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/tom2.jpg"
+                width="264"
+                height="260"
+                alt="tom2"
+                class="picture-team"
+              />
+              <div class="tom">
+                <h3 class="card-heading">Tom Ford</h3>
+                <p class="card-desc">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/camila3.jpg"
+                width="264"
+                height="260"
+                alt="camila3"
+                class="picture-team"
+              />
+              <div class="camila">
+                <h3 class="card-heading">Camila Garcia</h3>
+                <p class="card-desc">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/daniel4.jpg"
+                width="264"
+                height="260"
+                alt="daniel4"
+                class="picture-team"
+              />
+              <div class="daniel">
+                <h3 class="card-heading">Daniel Wilson</h3>
+                <p class="card-desc">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
-    </div>
     </main>
 
     <footer class="footer">
-    <div class="container">
-      <a href="./index.html" class="link footer-logo-web"
-        >WEB<span class="link footer-logo-studio">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </div>
+      <div class="container">
+        <a href="./index.html" class="link footer-logo-web"
+          >WEB<span class="link footer-logo-studio">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
