--- a/portfolio.html
+++ b/portfolio.html
@@ -95,10 +95,12 @@
                   height="300"
                   class="card-row"
                 />
-                <h2 class="portfolio-subtitle">
-                  Banking App Interface Concept
-                </h2>
-                <p class="portfolio-text">App</p>
+                <div class="prj-card">
+                  <h2 class="portfolio-subtitle">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="portfolio-text">App</p>
+                </div>
               </a>
             </li>
 
@@ -111,8 +113,10 @@
                   height="300"
                   class="card-row"
                 />
-                <h2 class="portfolio-subtitle">Cashless Payment</h2>
-                <p class="portfolio-text">Marketing</p>
+                <div class="prj-card">
+                  <h2 class="portfolio-subtitle">Cashless Payment</h2>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
               </a>
             </li>
 
@@ -125,8 +129,10 @@
                   height="300"
                   class="card-row"
                 />
-                <h2 class="portfolio-subtitle">Meditation App</h2>
-                <p class="portfolio-text">App</p>
+                <div class="prj-card">
+                  <h2 class="portfolio-subtitle">Meditation App</h2>
+                  <p class="portfolio-text">App</p>
+                </div>
               </a>
             </li>
 
@@ -140,8 +146,10 @@
                   height="300"
                   class="card-row"
                 />
-                <h2 class="portfolio-subtitle">Taxi Service</h2>
-                <p class="portfolio-text">Marketing</p>
+                <div class="prj-card">
+                  <h2 class="portfolio-subtitle">Taxi Service</h2>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
               </a>
             </li>
 
@@ -154,8 +162,10 @@
                   height="300"
                   class="card-row"
                 />
-                <h2 class="portfolio-subtitle">Screen Illustrations</h2>
-                <p class="portfolio-text">Design</p>
+                <div class="prj-card">
+                  <h2 class="portfolio-subtitle">Screen Illustrations</h2>
+                  <p class="portfolio-text">Design</p>
+                </div>
               </a>
             </li>
 
@@ -168,8 +178,10 @@
                   height="300"
                   class="card-row"
                 />
-                <h2 class="portfolio-subtitle">Online Courses</h2>
-                <p class="portfolio-text">Marketing</p>
+                <div class="prj-card">
+                  <h2 class="portfolio-subtitle">Online Courses</h2>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
               </a>
             </li>
 
@@ -184,8 +196,10 @@
                   height="300"
                   class="card-row"
                 />
-                <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
-                <p class="portfolio-text">Design</p>
+                <div class="prj-card">
+                  <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
+                  <p class="portfolio-text">Design</p>
+                </div>
               </a>
             </li>
 
@@ -198,8 +212,10 @@
                   height="300"
                   class="card-row"
                 />
-                <h2 class="portfolio-subtitle">Organic Food</h2>
-                <p class="portfolio-text">Web Site</p>
+                <div class="prj-card">
+                  <h2 class="portfolio-subtitle">Organic Food</h2>
+                  <p class="portfolio-text">Web Site</p>
+                </div>
               </a>
             </li>
 
@@ -212,8 +228,10 @@
                   height="300"
                   class="card-row"
                 />
-                <h2 class="portfolio-subtitle">Fresh Coffee</h2>
-                <p class="portfolio-text">Web Site</p>
+                <div class="prj-card">
+                  <h2 class="portfolio-subtitle">Fresh Coffee</h2>
+                  <p class="portfolio-text">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
