--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 alt="mark1"
                 class="picture-team"
               />
-              <div class="mark">
+              <div class="avatar">
                 <h3 class="card-heading">Mark Guerrero</h3>
                 <p class="card-desc">Product Designer</p>
               </div>
@@ -173,7 +173,7 @@
                 alt="tom2"
                 class="picture-team"
               />
-              <div class="tom">
+              <div class="avatar">
                 <h3 class="card-heading">Tom Ford</h3>
                 <p class="card-desc">Frontend Developer</p>
               </div>
@@ -186,7 +186,7 @@
                 alt="camila3"
                 class="picture-team"
               />
-              <div class="camila">
+              <div class="avatar">
                 <h3 class="card-heading">Camila Garcia</h3>
                 <p class="card-desc">Marketing</p>
               </div>
@@ -199,7 +199,7 @@
                 alt="daniel4"
                 class="picture-team"
               />
-              <div class="daniel">
+              <div class="avatar">
                 <h3 class="card-heading">Daniel Wilson</h3>
                 <p class="card-desc">UI Designer</p>
               </div>
