--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header class="header-nav">
       <div class="container">
-        <nav>
+        <nav class="navigation">
           <a href="./index.html" class="link header-logo-web"
             >WEB<span class="link header-logo-studio">Studio</span></a
           >
