--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
   <body>
     <header class="header-nav">
       <div class="container">
-        <nav>
+        <nav class="navigation">
           <a href="./portfolio.html" class="link header-logo-web"
             >WEB<span class="link header-logo-studio">Studio</span></a
           >
