--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
     <header class="header-nav">
       <div class="container">
         <nav class="navigation">
-          <a href="./portfolio.html" class="link header-logo-web"
-            >WEB<span class="link header-logo-studio">Studio</span></a
+          <a href="./portfolio.html" class="link logo"
+            >WEB<span class="link logo-studio">Studio</span></a
           >
           <ul class="nav-list">
             <li class="nav-list-item">
