--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="container">
         <nav class="navigation">
           <a href="./index.html" class="link logo"
-            >WEB<span class="link logo-studio">Studio</span></a
+            >WEB<span class="logo-studio">Studio</span></a
           >
           <ul class="nav-list">
             <li class="nav-list-item">
@@ -212,7 +212,7 @@
     <footer class="footer">
       <div class="container">
         <a href="./index.html" class="link footer-logo-web"
-          >WEB<span class="link footer-logo-studio">Studio</span></a
+          >WEB<span class="footer-logo-studio">Studio</span></a
         >
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
